// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> should match the loading snapshot 1`] = `
<article
  className="card"
>
  <p
    className="card-X"
  >
    X
  </p>
</article>
`;

exports[`<Card /> should match the mockActionCard snapshot 1`] = `
<article
  className="card"
  data-name="Village"
  id={1231}
  key="1231"
>
  <header
    style={
      Object {
        "backgroundColor": "lightGreen",
      }
    }
  >
    Village
  </header>
  <img
    alt="Village"
    src="Village.jpg"
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <footer>
    <p>
      3
    </p>
    <p>
      Action
    </p>
  </footer>
</article>
`;

exports[`<Card /> should match the mockTreasureCard snapshot 1`] = `
<article
  className="card"
  data-name="Copper"
  id={1113}
  key="1113"
>
  <header
    style={
      Object {
        "backgroundColor": "lightGreen",
      }
    }
  >
    Copper
  </header>
  <img
    alt="Copper"
    src="Copper.jpg"
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <footer>
    <p>
      0
    </p>
    <p>
      Treasure
    </p>
  </footer>
</article>
`;

exports[`<Card /> should match the mockVictoryCard snapshot 1`] = `
<article
  className="card"
  data-name="Province"
  id={3781}
  key="3781"
>
  <header
    style={
      Object {
        "backgroundColor": "lightGreen",
      }
    }
  >
    Province
  </header>
  <img
    alt="Province"
    src="Province.jpg"
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <footer>
    <p>
      8
    </p>
    <p>
      Victory
    </p>
  </footer>
</article>
`;
